chore: mega code cleanup
- update AttributeManagerUtil to generate smell free code
- other minor lanaguage specific changes everywhere