@@ -8,6 +8,7 @@ package com.zimbra.cs.fb;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.HashMap;
@@ -55,8 +56,8 @@ public class RemoteFreeBusyProvider extends FreeBusyProvider {
 
     public RemoteFreeBusyProvider(HttpServletRequest httpReq, ZimbraSoapContext zsc,
                                   long start, long end, String exApptUid) {
-        mRemoteAccountMap = new HashMap<String,StringBuilder>();
-        mRequestList = new ArrayList<Request>();
+        mRemoteAccountMap = new HashMap<>();
+        mRequestList = new ArrayList<>();
         mHttpReq = httpReq;
         mSoapCtxt = zsc;
         mStart = start;
@@ -96,7 +97,7 @@ public class RemoteFreeBusyProvider extends FreeBusyProvider {
 
     @Override
     public List<FreeBusy> getResults() {
-        ArrayList<FreeBusy> fbList = new ArrayList<FreeBusy>();
+        ArrayList<FreeBusy> fbList = new ArrayList<>();
         for (Request req : mRequestList) {
             HttpRequestBase method = null;
             Account acct = (Account)req.data;
@@ -108,20 +109,17 @@ public class RemoteFreeBusyProvider extends FreeBusyProvider {
                 targetUrl.append("&end=").append(mEnd);
                 if (req.folder != FreeBusyQuery.CALENDAR_FOLDER_ALL)
                     targetUrl.append("&").append(UserServlet.QP_FREEBUSY_CALENDAR).append("=").append(req.folder);
-                try {
-                    if (mExApptUid != null)
-                        targetUrl.append("&").append(UserServlet.QP_EXUID).append("=").append(URLEncoder.encode(mExApptUid, "UTF-8"));
-                } catch (UnsupportedEncodingException e) {}
-                String authToken = null;
+              if (mExApptUid != null)
+                  targetUrl.append("&").append(UserServlet.QP_EXUID).append("=").append(URLEncoder.encode(mExApptUid,
+                      StandardCharsets.UTF_8));
+              String authToken = null;
                 try {
                     if (mSoapCtxt != null)
                         authToken = mSoapCtxt.getAuthToken().getEncoded();
                 } catch (AuthTokenException e) {}
                 if (authToken != null) {
                     targetUrl.append("&").append(ZimbraServlet.QP_ZAUTHTOKEN).append("=");
-                    try {
-                        targetUrl.append(URLEncoder.encode(authToken, "UTF-8"));
-                    } catch (UnsupportedEncodingException e) {}
+                  targetUrl.append(URLEncoder.encode(authToken, StandardCharsets.UTF_8));
                 }
                 HttpClientBuilder clientBuilder = ZimbraHttpConnectionManager.getInternalHttpConnMgr().newHttpClient();
                 HttpProxyUtil.configureProxy(clientBuilder);
@@ -130,7 +128,7 @@ public class RemoteFreeBusyProvider extends FreeBusyProvider {
                 try {
                     HttpResponse response =  HttpClientUtil.executeMethod(clientBuilder.build(), method);
                     byte[] buf = ByteUtil.getContent(response.getEntity().getContent(), 0);
-                    fbMsg = new String(buf, "UTF-8");
+                    fbMsg = new String(buf, StandardCharsets.UTF_8);
                 } catch (IOException | HttpException ex) {
                     // ignore this recipient and go on
                     fbMsg = null;
@@ -241,13 +239,13 @@ public class RemoteFreeBusyProvider extends FreeBusyProvider {
     public String getName() {
         return REMOTE;
     }
-    private Map<String,StringBuilder> mRemoteAccountMap;
-    private ArrayList<Request> mRequestList;
-    private HttpServletRequest mHttpReq;
-    private ZimbraSoapContext mSoapCtxt;
-    private long mStart;
-    private long mEnd;
-    private String mExApptUid;  // UID of appointment to exclude from free/busy search
+    private final Map<String,StringBuilder> mRemoteAccountMap;
+    private final ArrayList<Request> mRequestList;
+    private final HttpServletRequest mHttpReq;
+    private final ZimbraSoapContext mSoapCtxt;
+    private final long mStart;
+    private final long mEnd;
+    private final String mExApptUid;  // UID of appointment to exclude from free/busy search
 
     private void addFailedAccounts(Element response, String[] idStrs) {
         for (String id : idStrs) {
