@@ -10,6 +10,7 @@ import static com.zimbra.cs.filter.JsieveConfigMapHandler.CAPABILITY_ENOTIFY;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
@@ -184,11 +185,7 @@ public class SetVariable extends AbstractCommand {
             } else if (operation.equals(ALL_UPPER_CASE)) {
                 temp = temp.toUpperCase();
             } else if (operation.equals(ENCODE_URL)) {
-                try {
-                    temp = URLEncoder.encode(temp, "UTF-8");
-                } catch (UnsupportedEncodingException e) {
-                    temp = value;
-                }
+              temp = URLEncoder.encode(temp, StandardCharsets.UTF_8);
             } else {
                 temp = value;
             }
@@ -260,10 +257,7 @@ public class SetVariable extends AbstractCommand {
      * @return
      */
     public static boolean isValidIdentifier(String key) {
-        if (VALID_IDENTIFIER_PATTERN.matcher(key).matches()) {
-           return true;
-        }
-        return false;
+      return VALID_IDENTIFIER_PATTERN.matcher(key).matches();
     }
 
     /**
@@ -273,11 +267,10 @@ public class SetVariable extends AbstractCommand {
     private boolean isValidModifier(String modifier) {
         String temp = modifier.toLowerCase();
         ZimbraLog.filter.debug("Set variable modifier is:" + temp);
-        if (temp.equals(ALL_LOWER_CASE) || temp.equals(ALL_UPPER_CASE) || temp.equals(LOWERCASE_FIRST) 
-                || temp.equals(UPPERCASE_FIRST) || temp.equals(QUOTE_WILDCARD) || temp.equals(STRING_LENGTH)
-                || temp.equals(ENCODE_URL)) {
-            return true;
-        }
-        return false;
+      return temp.equals(ALL_LOWER_CASE) || temp.equals(ALL_UPPER_CASE) || temp.equals(
+          LOWERCASE_FIRST)
+          || temp.equals(UPPERCASE_FIRST) || temp.equals(QUOTE_WILDCARD) || temp.equals(
+          STRING_LENGTH)
+          || temp.equals(ENCODE_URL);
     }
 }
